# ql-picture

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  devenv.nix
include/: ql-palette.h
src/: ql-palette.c  ql-picture.c
